[build-system]
requires = ["scikit-build-core>=0.11.0", "pybind11", "cmake>=3.15,<4",]
build-backend = "scikit_build_core.build"

[project]
name = "poisson-recon"
version = "0.1.0"
description = "Python bindings for Screened Poisson Surface Reconstruction"
# Now relative to python/ folder
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Michael Kazhdan", email = "misha@cs.jhu.edu" },
]
dependencies = [
    "tyro",
]

[project.scripts]
poisson-recon = "poisson_recon.cli:entry_point"

[tool.scikit-build]
# Point to root directory where main CMakeLists.txt is
cmake.source-dir = ".."
cmake.args = []
install.components = [""] 

[tool.scikit-build.wheel]
# Looking for package in current folder
packages = ["poisson_recon"]
